--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
 version = '1.0'
 
 repositories {
@@ -12,5 +11,5 @@ dependencies {
     compile "com.google.code.findbugs:jsr305:2.0.3"
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile 'junit:junit:4.11'
 }
